--- a/style/style.css
+++ b/style/style.css
@@ -143,9 +143,10 @@ margin-top: 5rem;
 .change-habits-picture{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  margin-left: 10rem;
+  margin-left: 8rem;
   margin-top: 2rem;
   text-align: center;
+  margin-right: 8rem;
   
 }
 
@@ -166,6 +167,72 @@ margin-top: 5rem;
   margin-top: 10px;
 }
 
+/* Run and extra section */
+.run-extra-section{
+  background: rgb(34, 34, 34);
+  margin-right: 10rem;
+  margin-left: 10rem;
+  display: flex;
+  justify-content: space-between;
+  border-radius: 20px;
+  margin-top: 5rem;
+  
+}
+.run-extra-section img{
+width: 400px;
+margin-top: 2rem;
+margin-right: 4rem;
+border-radius: 20px;
+}
+.run-extra-section-details{
+  margin-top: 1rem;
+  margin-left: 4rem;
+  padding: 1rem;
+}
+.run-extra-section h2{
+  color: rgb(255, 255, 255);
+  font-size: 48px;
+  font-weight: 900;
+
+}
+.run-extra-section p{
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+}
+.run-extra-section h6{
+  font-size: 18px;
+font-weight: 600;
+padding: 10px 30px 10px 30px;
+color: rgb(255, 255, 255);
+
+}
+.extra-button{
+  border-radius: 50px;
+  border: none;
+  margin-top: 2rem;
+  background-color: rgb(230, 83, 60);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -185,6 +252,19 @@ margin-top: 5rem;
   margin-left: 25px;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+.run-extra-section{
+  flex-direction: column;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+.run-extra-section img{
+width: 260px;
+margin-right: 5px;
+}
+.run-extra-section-details{
+  margin-top: 10px;
+  margin-left: 1rem;
 }
 
 
