--- a/style/style.css
+++ b/style/style.css
@@ -234,18 +234,61 @@ margin-top: 5rem;
   margin-top: 1rem;
 }
 
+.meet-our-team-section{
+  background: rgba(255, 255, 255, 0.1);
+  margin-right: 10rem;
+  margin-left: 10rem;
+  display: grid;
+  grid-template-columns: repeat(3, 2fr);
+  margin-top: 2rem;
+  border-radius: 20px;
+ 
+}
+.trainer1-text{
+  /* position: absolute; */
+  position: relative;
+  bottom: 40px;
+  left: 10px;
+}
+.trainer1-section{
+  margin-left: 4rem;
+}
+
+.trainer1-section img{
+  margin-top: 1rem;
+  border-radius: 20px;
+}
 
 
+.trainer1{
+  width: 300px;
+  height: 200px;
 
+  
+}
 
+.trainer2{
+  width: 300px;
+  height: 200px;
+}
 
+.trainer3{
+  width: 300px;
+  height: 200px;
+}
+.trainer4{
+  width: 300px;
+  height: 200px;
+}
+.trainer5{
+  width: 300px;
+  height: 200px;
+}
 
-
-
-
-
-
-
+.trainer6{
+  width: 300px;
+  height: 200px;
+}
 
 
 
@@ -278,6 +321,20 @@ margin-right: 5px;
 .run-extra-section-details{
   margin-top: 10px;
   margin-left: 1rem;
+}
+
+.meet-our-team-section{
+  grid-template-columns: repeat(1, 1fr);
+  margin-right: 5px;
+  margin-left: 5px;
+}
+
+.trainer1-section{
+  margin-left: 2px;
+}
+
+.trainer1-section img{
+  width: 100%;
 }
 
 
