--- a/style/style.css
+++ b/style/style.css
@@ -124,6 +124,17 @@ border-radius: 100%;
 background-color: red;
 }
 
+
+
+
+
+
+
+
+
+
+
+
 /* change-habits */
 .change-habits{
 text-align: center;
@@ -214,6 +225,138 @@ color: rgb(255, 255, 255);
   margin-top: 2rem;
   background-color: rgb(230, 83, 60);
 }
+/* Bmi calculator section */
+.bmi-calculator{
+  text-align: center;
+margin-top: 5rem;
+margin-bottom: 5rem;
+}
+.bmi-calculator h2{
+  color: rgb(255, 255, 255);
+  font-size: 48px;
+  font-weight: 900;
+}
+.bmi-calculator p{
+  font-size: 14px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.5);
+  margin-top: 1rem;
+}
+.bmi-calculator-text{
+  background: rgb(34, 34, 34);
+  margin-right: 10rem;
+  margin-left: 10rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.bmi-calculator-section{
+  margin-left: 5rem;
+  margin-top: 4rem;
+  margin-bottom: 3rem;
+}
+
+.bmi-calculator-section h2{
+  color: rgb(255, 255, 255);
+  font-size: 28px;
+  font-weight: 900;
+  margin-bottom: 20px;
+}
+
+.table tr, td{
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-collapse: collapse;
+  font-size: 14px;
+font-weight: 400;
+color: rgba(255, 255, 255, 0.5);
+padding: 10px;
+
+}
+
+
+.bmi-calculator-part-two{
+  margin-top: 4rem;
+}
+.bmi-calculator-part-two h2{
+  font-size: 28px;
+font-weight: 900;
+color: rgb(255, 255, 255);
+padding-bottom: 10px;
+}
+
+
+.bmi-calculator-part-two p{
+  font-size: 14px;
+font-weight: 400;
+line-height: 24px;
+color: rgba(255, 255, 255, 0.5);
+}
+
+#hight{
+  background: rgba(255, 255, 255, 0.1);
+  color: rgba(255, 255, 255, 0.6);
+  border: none;
+  padding: 10px;
+ margin-top: 10px;
+ border-radius: 5px;
+ font-size: 16px;
+font-weight: 400;
+ 
+}
+#weight{
+  background: rgba(255, 255, 255, 0.1);
+  color: rgba(255, 255, 255, 0.6);
+  border: none;
+  padding: 10px;
+ margin-top: 10px;
+ border-radius: 5px;
+ font-size: 16px;
+font-weight: 400;
+margin-left: 5px;
+}
+
+#age{
+  background: rgba(255, 255, 255, 0.1);
+  color: rgba(255, 255, 255, 0.6);
+  border: none;
+  padding: 10px;
+ margin-top: 10px;
+ border-radius: 5px;
+ font-size: 16px;
+font-weight: 400;
+}
+#sex{
+  background: rgba(255, 255, 255, 0.1);
+  color: rgba(255, 255, 255, 0.6);
+  border: none;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10rem;
+  padding-bottom: 10px;
+ margin-top: 10px;
+ border-radius: 5px;
+ font-size: 16px;
+font-weight: 400;
+margin-left: 5px;
+}
+#factor{
+  background: rgba(255, 255, 255, 0.1);
+  color: rgba(255, 255, 255, 0.6);
+  border: none;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 15rem;
+  padding-bottom: 10px;
+ margin-top: 15px;
+ border-radius: 5px;
+ font-size: 16px;
+font-weight: 400;
+
+}
+
+
+
+
 
 /* meet our team section */
 .meet-our-team{
@@ -430,6 +573,26 @@ margin-right: 5px;
 .footer-section{
 margin-right: 5px;
 margin-left: 5px;
+}
+
+.bmi-calculator-text{
+  grid-template-columns: repeat(1, 1fr);
+  margin-right: 5px;
+  margin-left: 5px;
+}
+
+.bmi-calculator{
+  margin-bottom: 5px;
+  margin-bottom: 5px;
+}
+.bmi-calculator-section{
+  margin-left: 5px;
+  margin-top: 2rem;
+  margin-bottom: 5px;
+}
+
+#factor{
+  padding-right: 20%;
 }
 
 
