--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Style+Script&display=swap');
+@import url('https://fonts.cdnfonts.com/css/miama');
 /* font-style */
 .inter-font{
   font-family: "Inter", sans-serif;
@@ -8,6 +9,9 @@
   margin: 0 auto;
 
   
+}
+.shape-font{
+  font-family: 'Miama', sans-serif;
 }
 .span-font{
   font-family: "Style Script", cursive;
@@ -572,7 +576,20 @@ hr{
   }
 .banner-section{
   flex-direction: column;
+  margin-right: 5px;
+  margin-left: 5px;
 }
+
+.banner-section-picture img{
+width: 90%;
+}
+.free-workout{
+  display: none;
+}
+.videos-tutorial{
+  display: none;
+}
+
 .change-habits-picture{
   grid-template-columns: repeat(1, 1fr);
   margin-left: 25px;
