--- a/style/style.css
+++ b/style/style.css
@@ -1,55 +1,52 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Style+Script&display=swap');
-@import url('https://fonts.cdnfonts.com/css/miama');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Style+Script&display=swap");
+@import url("https://fonts.cdnfonts.com/css/miama");
 /* font-style */
-.inter-font{
+.inter-font {
   font-family: "Inter", sans-serif;
 
   width: 90%;
   margin: 0 auto;
-
-  
 }
-.shape-font{
-  font-family: 'Miama', sans-serif;
+.shape-font {
+  font-family: "Miama", sans-serif;
 }
-.span-font{
+.span-font {
   font-family: "Style Script", cursive;
   font-style: italic;
 }
-.bg-color{
+.bg-color {
   background-color: black;
   color: white;
 }
-*{
+* {
   margin: 0;
   padding: 0;
 }
-.header-contant{
-  
-  
-  background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%);
+.header-contant {
+  background: linear-gradient(
+    180deg,
+    rgb(17, 17, 17),
+    rgba(119, 119, 119, 0) 100%
+  );
 }
 
 /* nav style  */
-.nav-contant{
-display: flex;
-justify-content: space-between;
+.nav-contant {
+  display: flex;
+  justify-content: space-between;
 }
-.nav-fitness{
+.nav-fitness {
   margin-top: 1rem;
 }
-.span-one{
-
-
+.span-one {
   color: rgb(230, 83, 60);
   font-size: 36px;
-  font-weight: 800; 
+  font-weight: 800;
   margin-left: 10rem;
-
 }
 
-.nav-li-contant{
+.nav-li-contant {
   list-style: none;
   display: flex;
   margin-right: 10rem;
@@ -59,55 +56,50 @@ justify-content: space-between;
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 1rem;
   padding: 10px;
-  
 }
-.nav-li-contant a{
+.nav-li-contant a {
   text-decoration: none;
   color: rgb(255, 255, 255);
-  margin: 1rem; 
- 
+  margin: 1rem;
 }
 
-.home{
+.home {
   background-color: red;
   padding: 10px;
   border-radius: 10px 0px 0px 10px;
 }
 /* banner section */
 
-.banner-section{
+.banner-section {
   display: flex;
   justify-content: space-between;
   margin-left: 10rem;
   margin-right: 10rem;
   margin-top: 3rem;
-  
 }
 
-
-.banner-section-text h2{
+.banner-section-text h2 {
   font-size: 78px;
   font-weight: 900;
   color: rgb(255, 255, 255);
-  
 }
 
-.banner-section-text p{
+.banner-section-text p {
   color: rgba(255, 255, 255, 0.5);
   font-size: 16px;
-font-weight: 400;
-line-height: 24px;
+  font-weight: 400;
+  line-height: 24px;
 }
-.one{
-border: none;
-padding: 15px;
-margin-top: 1rem;
-margin-right: 10px;
-border-radius: 25px;
-background: rgb(230, 83, 60);
-color: rgb(255, 255, 255);
+.one {
+  border: none;
+  padding: 15px;
+  margin-top: 1rem;
+  margin-right: 10px;
+  border-radius: 25px;
+  background: rgb(230, 83, 60);
+  color: rgb(255, 255, 255);
 }
-.two{
+.two {
   border: none;
   padding: 15px;
   margin-top: 1rem;
@@ -117,11 +109,11 @@ color: rgb(255, 255, 255);
   color: rgb(255, 255, 255);
   background-color: rgba(255, 255, 255, 0.5);
 }
-.banner-section-picture{
+.banner-section-picture {
   padding: 5px;
   position: relative;
 }
-.videos-tutorial{
+.videos-tutorial {
   width: 180px;
   height: 80px;
   border: 1px solid rgba(255, 255, 255, 0.1);
@@ -131,7 +123,7 @@ color: rgb(255, 255, 255);
   bottom: 21rem;
   left: 18rem;
 }
-.free-workout{
+.free-workout {
   width: 180px;
   height: 80px;
   border: 1px solid rgba(255, 255, 255, 0.1);
@@ -140,73 +132,68 @@ color: rgb(255, 255, 255);
   position: absolute;
   bottom: 4rem;
   left: -8rem;
-
 }
-.free-workout h3{
+.free-workout h3 {
   color: rgb(255, 255, 255);
   font-size: 40px;
-font-weight: 900;
-padding: 5px;
+  font-weight: 900;
+  padding: 5px;
 }
-.free-workout p{
+.free-workout p {
   font-size: 13px;
-font-weight: 400;
-color: rgba(255, 255, 255, 0.65);
-padding-left: 5px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.65);
+  padding-left: 5px;
 }
 
-
-
-.videos-tutorial h3{
+.videos-tutorial h3 {
   color: rgb(255, 255, 255);
   font-size: 40px;
-font-weight: 900;
-padding: 5px;
+  font-weight: 900;
+  padding: 5px;
 }
-.videos-tutorial p{
+.videos-tutorial p {
   font-size: 13px;
-font-weight: 400;
-color: rgba(255, 255, 255, 0.65);
-padding-left: 5px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.65);
+  padding-left: 5px;
 }
-  
+
 /* change-habits */
-.change-habits{
-text-align: center;
-margin-top: 5rem;
+.change-habits {
+  text-align: center;
+  margin-top: 5rem;
 }
-.change-habits h2{
+.change-habits h2 {
   color: rgb(255, 255, 255);
   font-size: 48px;
   font-weight: 900;
 }
-.change-habits p{
+.change-habits p {
   font-size: 14px;
   font-weight: 400;
   color: rgba(255, 255, 255, 0.5);
   margin-top: 1rem;
 }
-.change-habits-picture{
+.change-habits-picture {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   margin-left: 8rem;
   margin-top: 2rem;
   text-align: center;
   margin-right: 8rem;
-  
 }
 
-
-.change-habits-picture img{
+.change-habits-picture img {
   border-radius: 100%;
 }
-.change-habits-picture h3{
+.change-habits-picture h3 {
   color: rgb(255, 255, 255);
   font-size: 18px;
   font-weight: 600;
   margin-top: 10px;
 }
-.change-habits-picture p{
+.change-habits-picture p {
   color: rgba(255, 255, 255, 0.5);
   font-size: 14px;
   font-weight: 400;
@@ -214,7 +201,7 @@ margin-top: 5rem;
 }
 
 /* Run and extra section */
-.run-extra-section{
+.run-extra-section {
   background: rgb(34, 34, 34);
   margin-right: 10rem;
   margin-left: 10rem;
@@ -222,62 +209,59 @@ margin-top: 5rem;
   justify-content: space-between;
   border-radius: 20px;
   margin-top: 5rem;
-  
 }
-.run-extra-section img{
-width: 400px;
-margin-top: 2rem;
-margin-right: 4rem;
-border-radius: 20px;
+.run-extra-section img {
+  width: 400px;
+  margin-top: 2rem;
+  margin-right: 4rem;
+  border-radius: 20px;
 }
-.run-extra-section-details{
+.run-extra-section-details {
   margin-top: 1rem;
   margin-left: 4rem;
   padding: 1rem;
 }
-.run-extra-section h2{
+.run-extra-section h2 {
   color: rgb(255, 255, 255);
   font-size: 48px;
   font-weight: 900;
-
 }
-.run-extra-section p{
+.run-extra-section p {
   color: rgba(255, 255, 255, 0.5);
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
 }
-.run-extra-section h6{
+.run-extra-section h6 {
   font-size: 18px;
-font-weight: 600;
-padding: 10px 30px 10px 30px;
-color: rgb(255, 255, 255);
-
+  font-weight: 600;
+  padding: 10px 30px 10px 30px;
+  color: rgb(255, 255, 255);
 }
-.extra-button{
+.extra-button {
   border-radius: 50px;
   border: none;
   margin-top: 2rem;
   background-color: rgb(230, 83, 60);
 }
 /* Bmi calculator section */
-.bmi-calculator{
+.bmi-calculator {
   text-align: center;
-margin-top: 5rem;
-margin-bottom: 5rem;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
-.bmi-calculator h2{
+.bmi-calculator h2 {
   color: rgb(255, 255, 255);
   font-size: 48px;
   font-weight: 900;
 }
-.bmi-calculator p{
+.bmi-calculator p {
   font-size: 14px;
   font-weight: 400;
   color: rgba(255, 255, 255, 0.5);
   margin-top: 1rem;
 }
-.bmi-calculator-text{
+.bmi-calculator-text {
   background: rgb(34, 34, 34);
   margin-right: 10rem;
   margin-left: 10rem;
@@ -285,82 +269,79 @@ margin-bottom: 5rem;
   grid-template-columns: repeat(2, 1fr);
 }
 
-.bmi-calculator-section{
+.bmi-calculator-section {
   margin-left: 5rem;
   margin-top: 4rem;
   margin-bottom: 3rem;
 }
 
-.bmi-calculator-section h2{
+.bmi-calculator-section h2 {
   color: rgb(255, 255, 255);
   font-size: 28px;
   font-weight: 900;
   margin-bottom: 20px;
 }
 
-.table tr, td{
+.table tr,
+td {
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-collapse: collapse;
   font-size: 14px;
-font-weight: 400;
-color: rgba(255, 255, 255, 0.5);
-padding: 10px;
-
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.5);
+  padding: 10px;
 }
 
-
-.bmi-calculator-part-two{
+.bmi-calculator-part-two {
   margin-top: 4rem;
 }
-.bmi-calculator-part-two h2{
+.bmi-calculator-part-two h2 {
   font-size: 28px;
-font-weight: 900;
-color: rgb(255, 255, 255);
-padding-bottom: 10px;
+  font-weight: 900;
+  color: rgb(255, 255, 255);
+  padding-bottom: 10px;
 }
 
-
-.bmi-calculator-part-two p{
+.bmi-calculator-part-two p {
   font-size: 14px;
-font-weight: 400;
-line-height: 24px;
-color: rgba(255, 255, 255, 0.5);
+  font-weight: 400;
+  line-height: 24px;
+  color: rgba(255, 255, 255, 0.5);
 }
 
-#hight{
+#hight {
   background: rgba(255, 255, 255, 0.1);
   color: rgba(255, 255, 255, 0.6);
   border: none;
   padding: 10px;
- margin-top: 10px;
- border-radius: 5px;
- font-size: 16px;
-font-weight: 400;
- 
+  margin-top: 10px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 400;
 }
-#weight{
+#weight {
   background: rgba(255, 255, 255, 0.1);
   color: rgba(255, 255, 255, 0.6);
   border: none;
   padding: 10px;
- margin-top: 10px;
- border-radius: 5px;
- font-size: 16px;
-font-weight: 400;
-margin-left: 5px;
+  margin-top: 10px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 400;
+  margin-left: 5px;
 }
 
-#age{
+#age {
   background: rgba(255, 255, 255, 0.1);
   color: rgba(255, 255, 255, 0.6);
   border: none;
   padding: 10px;
- margin-top: 10px;
- border-radius: 5px;
- font-size: 16px;
-font-weight: 400;
+  margin-top: 10px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 400;
 }
-#sex{
+#sex {
   background: rgba(255, 255, 255, 0.1);
   color: rgba(255, 255, 255, 0.6);
   border: none;
@@ -368,13 +349,13 @@ font-weight: 400;
   padding-left: 10px;
   padding-right: 10rem;
   padding-bottom: 10px;
- margin-top: 10px;
- border-radius: 5px;
- font-size: 16px;
-font-weight: 400;
-margin-left: 5px;
+  margin-top: 10px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 400;
+  margin-left: 5px;
 }
-#factor{
+#factor {
   background: rgba(255, 255, 255, 0.1);
   color: rgba(255, 255, 255, 0.6);
   border: none;
@@ -382,37 +363,31 @@ margin-left: 5px;
   padding-left: 10px;
   padding-right: 15rem;
   padding-bottom: 10px;
- margin-top: 15px;
- border-radius: 5px;
- font-size: 16px;
-font-weight: 400;
-
+  margin-top: 15px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 400;
 }
-
-
-
-
 
 /* meet our team section */
-.meet-our-team{
+.meet-our-team {
   text-align: center;
-margin-top: 5rem;
-
+  margin-top: 5rem;
 }
 
-.meet-our-team h2{
+.meet-our-team h2 {
   color: rgb(255, 255, 255);
   font-size: 48px;
   font-weight: 900;
 }
-.meet-our-team p{
+.meet-our-team p {
   font-size: 14px;
   font-weight: 400;
   color: rgba(255, 255, 255, 0.5);
   margin-top: 1rem;
 }
 
-.meet-our-team-section{
+.meet-our-team-section {
   background: rgba(255, 255, 255, 0.1);
   margin-right: 10rem;
   margin-left: 10rem;
@@ -420,92 +395,88 @@ margin-top: 5rem;
   grid-template-columns: repeat(3, 2fr);
   margin-top: 2rem;
   border-radius: 20px;
- 
 }
-.trainer1-text{
+.trainer1-text {
   /* position: absolute; */
   position: relative;
   bottom: 40px;
   left: 10px;
 }
-.trainer1-section{
+.trainer1-section {
   margin-left: 4rem;
 }
 
-.trainer1-section img{
+.trainer1-section img {
   margin-top: 1rem;
   border-radius: 20px;
 }
 
-
-.trainer1{
-  width: 300px;
-  height: 200px;
-
-  
-}
-
-.trainer2{
+.trainer1 {
   width: 300px;
   height: 200px;
 }
 
-.trainer3{
-  width: 300px;
-  height: 200px;
-}
-.trainer4{
-  width: 300px;
-  height: 200px;
-}
-.trainer5{
+.trainer2 {
   width: 300px;
   height: 200px;
 }
 
-.trainer6{
+.trainer3 {
+  width: 300px;
+  height: 200px;
+}
+.trainer4 {
+  width: 300px;
+  height: 200px;
+}
+.trainer5 {
+  width: 300px;
+  height: 200px;
+}
+
+.trainer6 {
   width: 300px;
   height: 200px;
 }
 
 /* footer section */
 
-.footer-section{
-  background-color:rgba(255, 255, 255, 0.1); 
+.footer-section {
+  background-color: rgba(255, 255, 255, 0.1);
   margin-left: 10rem;
   margin-right: 10rem;
   margin-top: 5rem;
   border-radius: 20px;
 }
 
-
-.footer-section-text{
-display: flex;
-justify-content: space-around;
+.footer-section-text {
+  display: flex;
+  justify-content: space-around;
 }
 
-.footer-one{
+.footer-one {
   margin-top: 4rem;
 }
-.footer-two, .footer-three{
+.footer-two,
+.footer-three {
   margin-top: 4rem;
   list-style: none;
 }
 
-.footer-one h2{
-color: rgb(230, 83, 60);
-font-size: 70px;
-font-weight: 800;
-padding-bottom: 20px;
+.footer-one h2 {
+  color: rgb(230, 83, 60);
+  font-size: 70px;
+  font-weight: 800;
+  padding-bottom: 20px;
 }
-.footer-one p{
+.footer-one p {
   font-size: 14px;
   font-weight: 400;
   color: rgba(255, 255, 255, 0.5);
   line-height: 24px;
 }
 
-.footer-two h4{
+.footer-two h4 {
   color: rgb(255, 255, 255);
   font-size: 32px;
   font-weight: 700;
@@ -513,14 +484,14 @@ padding-bottom: 20px;
   padding-bottom: 1rem;
   margin-bottom: 10px;
 }
-.footer-two li{
+.footer-two li {
   color: rgba(255, 255, 255, 0.5);
   font-size: 23px;
   font-weight: 400;
   line-height: 40px;
 }
 
-.footer-three h4{
+.footer-three h4 {
   color: rgb(255, 255, 255);
   font-size: 32px;
   font-weight: 700;
@@ -529,132 +500,112 @@ padding-bottom: 20px;
   margin-bottom: 10px;
 }
 
-.footer-three li{
+.footer-three li {
   color: rgba(255, 255, 255, 0.5);
   font-size: 23px;
   font-weight: 400;
   line-height: 40px;
 }
-hr{
+hr {
   margin-top: 3rem;
   border: 2px solid rgba(255, 255, 255, 0.1);
   margin-left: 6rem;
   margin-right: 6rem;
 }
 
-.footer-four{
+.footer-four {
   text-align: center;
   margin-top: 1rem;
   padding-bottom: 2rem;
   color: rgba(255, 255, 255, 0.5);
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-@media screen and (max-width:576px) {
-
-  .nav-contant{
+@media screen and (max-width: 576px) {
+  .nav-contant {
     flex-direction: column;
   }
-  .span-one{
+  .span-one {
     margin-left: 10px;
-    
-    
   }
-  .nav-li-contant{
+  .nav-li-contant {
     display: none;
   }
-.banner-section{
-  flex-direction: column;
-  margin-right: 5px;
-  margin-left: 5px;
-}
+  .banner-section {
+    flex-direction: column;
+    margin-right: 5px;
+    margin-left: 5px;
+  }
 
-.banner-section-picture img{
-width: 90%;
-}
-.free-workout{
-  display: none;
-}
-.videos-tutorial{
-  display: none;
-}
+  .banner-section-picture img {
+    width: 90%;
+  }
+  .free-workout {
+    display: none;
+  }
+  .videos-tutorial {
+    display: none;
+  }
 
-.change-habits-picture{
-  grid-template-columns: repeat(1, 1fr);
-  margin-left: 25px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-.run-extra-section{
-  flex-direction: column;
-  margin-right: 10px;
-  margin-left: 10px;
-}
-.run-extra-section img{
-width: 260px;
-margin-right: 5px;
-}
-.run-extra-section-details{
-  margin-top: 10px;
-  margin-left: 1rem;
-}
+  .change-habits-picture {
+    grid-template-columns: repeat(1, 1fr);
+    margin-left: 25px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  .run-extra-section {
+    flex-direction: column;
+    margin-right: 10px;
+    margin-left: 10px;
+  }
+  .run-extra-section img {
+    width: 260px;
+    margin-right: 5px;
+  }
+  .run-extra-section-details {
+    margin-top: 10px;
+    margin-left: 1rem;
+  }
 
-.meet-our-team-section{
-  grid-template-columns: repeat(1, 1fr);
-  margin-right: 5px;
-  margin-left: 5px;
-}
+  .meet-our-team-section {
+    grid-template-columns: repeat(1, 1fr);
+    margin-right: 5px;
+    margin-left: 10px;
+    
+  }
 
-.trainer1-section{
-  margin-left: 2px;
-}
+  .trainer1-section {
+    margin-left: 2px;
+  }
 
-.trainer1-section img{
-  width: 100%;
-}
-.footer-section-text{
-  flex-direction: column;
-}
+  .trainer1-section img {
+    width: 100%;
+  }
+  .footer-section-text {
+    flex-direction: column;
+  }
 
+  .footer-section {
+    margin-right: 5px;
+    margin-left: 5px;
+  }
 
+  .bmi-calculator-text {
+    grid-template-columns: repeat(1, 1fr);
+    margin-right: 5px;
+    margin-left: 5px;
+  }
 
-.footer-section{
-margin-right: 5px;
-margin-left: 5px;
-}
+  .bmi-calculator {
+    margin-bottom: 5px;
+    margin-bottom: 5px;
+  }
+  .bmi-calculator-section {
+    margin-left: 5px;
+    margin-top: 2rem;
+    margin-bottom: 5px;
+  }
 
-.bmi-calculator-text{
-  grid-template-columns: repeat(1, 1fr);
-  margin-right: 5px;
-  margin-left: 5px;
-}
-
-.bmi-calculator{
-  margin-bottom: 5px;
-  margin-bottom: 5px;
-}
-.bmi-calculator-section{
-  margin-left: 5px;
-  margin-top: 2rem;
-  margin-bottom: 5px;
-}
-
-#factor{
-  padding-right: 20%;
-}
-
-
-
-
+  #factor {
+    padding-right: 20%;
+  }
 }
